--- a/Json_Files/config.json
+++ b/Json_Files/config.json
@@ -3,16 +3,16 @@
     "keywords": ["PHARRELL", "V2"],
     "size": "9",
     "monitorDelay": 3,
-    "email": "fdigiaco@stevens.edu",
-    "firstName": "Frank",
-    "lastName": "DiGiacomo",
+    "email": "mynameis@stevens.edu",
+    "firstName": "Bob",
+    "lastName": "Thebuilder",
     "streetAddress": "111 test lane",
     "apartmentNumber": " ",
     "state": "New York",
-    "city": "Carmel",
-    "zipCode": "10512",
+    "city": "New York",
+    "zipCode": "10010",
     "phoneNumber": "9141231234",
-    "nameOnCard": "Frank DiGiacomo",
+    "nameOnCard": "Bob Thebuilder",
     "cardNumber": "1234123412341234",
     "expMonth": "08",
     "expYear": "22",
